examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__tuples_with_splat@(foo, *bar, *baz).snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Tuple(
                                    Tuple {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                            ListSplat(
                                                ListSplat {
                                                    children: Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                            ListSplat(
                                                ListSplat {
                                                    children: Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
