examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__tuples_with_yield@(a, yield a, b, c).snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Tuple(
                                    Tuple {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                            Yield(
                                                Yield {
                                                    children: Some(
                                                        ExpressionList(
                                                            ExpressionList {
                                                                children: [
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ],
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
